--- a/templates/shop.html
+++ b/templates/shop.html
@@ -1,7 +1,7 @@
 {% extends 'base.html' %}
 {% load static %}
 
-{% block title %}Products - hello bajar{% endblock %}
+{% block title %}Shop{% endblock %}
 
 {% block extra_css %}
 <style>
@@ -23,7 +23,6 @@
 {% endblock %}
 
 {% block content %}
-<!-- slider -->
 <section class="w-full">
     <div class="swiper w-full h-[200px] md:h-[400px] md:h-96 lg:h-[300px] xl:h-[400px] rounded-lg overflow-hidden">
         <div class="swiper-wrapper">
@@ -41,20 +40,9 @@
     </div>
 </section>
 
-
-
-<!-- Product Grid -->
 <div class="flex-1">
     <section class="p-1 sm:p-2 md:p-3 bg-white">
-        <div class="flex items-center justify-between bg-gray-200 p-2 rounded  mb-4">
-                    <h2 class="text-2xl sm:text-3xl md:text-4xl font-bold text-gray-800">
-                        shop
-                    </h2>
-                    <a href="{% url 'website:all_product' %}"
-                        class="inline-block py-2 px-4 text-base font-medium bg-white text-gray-600 border border-gray-100 rounded hover:bg-gray-50">
-                        View All Product
-                    </a>
-                </div>
+        
         <div class="flex flex-col md:flex-row gap-6">
 
             <div class="md:flex-grow md:w-3/4 bg-gray-200 shadow-lg rounded-lg p-2 sm:p-6 mb-2">
@@ -62,7 +50,7 @@
                     <h2 class="text-2xl sm:text-3xl md:text-4xl font-bold text-gray-800">
                         Electronic
                     </h2>
-                    <a href="#"
+                    <a href="{% url 'website:all_product' %}"
                         class="inline-block py-2 px-4 text-base font-medium bg-white text-gray-600 border border-gray-100 rounded-lg hover:bg-gray-50">
                         view more
                     </a>
@@ -71,17 +59,9 @@
                 <div class="grid grid-cols-2 xs:grid-cols-2 md:grid-cols-2 lg:grid-cols-3 xl:grid-cols-4 gap-3 sm:gap-4 md:gap-6">
                     <div class="bg-white rounded-lg shadow-md hover:shadow-xl transition p-2 sm:p-2 flex flex-col">
                         <div class="w-full aspect-square mb-3 overflow-hidden rounded-lg">
-                            <div class="swiper w-full h-full">
-                                <div class="swiper-wrapper">
-                                    <div class="swiper-slide">
+                            <div class="w-full h-full">
                                         <img src="{% static 'image/oil painting1.jpg' %}" alt="Oil Painting"
                                             class="w-full h-full object-cover">
-                                    </div>
-                                    <div class="swiper-slide">
-                                        <img src="{% static 'image/Dhaka Nepali Cholo.jpg' %}" alt="Nepali Cholo"
-                                            class="w-full h-full object-cover">
-                                    </div>
-                                </div>
                                 <div class="swiper-button-next !text-white "></div>
                                 <div class="swiper-button-prev !text-white "></div>
                             </div>
@@ -99,38 +79,6 @@
                             </div>
                         </div>
                     </div>
-
-                    <div class="bg-white rounded-lg shadow-md hover:shadow-xl transition p-2 sm:p-2 flex flex-col">
-                        <div class="w-full aspect-square mb-3 overflow-hidden rounded-lg">
-                            <div class="swiper w-full h-full">
-                                <div class="swiper-wrapper">
-                                    <div class="swiper-slide">
-                                        <img src="{% static 'image/oil painting1.jpg' %}" alt="Oil Painting"
-                                            class="w-full h-full object-cover">
-                                    </div>
-                                    <div class="swiper-slide">
-                                        <img src="{% static 'image/Dhaka Nepali Cholo.jpg' %}" alt="Nepali Cholo"
-                                            class="w-full h-full object-cover">
-                                    </div>
-                                </div>
-                                <div class="swiper-button-next !text-white "></div>
-                                <div class="swiper-button-prev !text-white "></div>
-                            </div>
-                        </div>
-                        <div class="flex flex-col flex-grow">
-                            <div class="flex-1 min-w-0">
-                                <h3 class="text-sm sm:text-base font-semibold text-gray-900 truncate">Oil Painting</h3>
-                                <div class="flex justify-between items-center mt-auto">
-                                    <span class="text-xs sm:text-xm text-gray-500">Made in Nepal</span>
-                                    <a href="{% url 'website:product' %}"
-                                        class="text-sm font-bold bg-white text-gray-600 hover:text-gray-400">
-                                        View More
-                                    </a>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-
                 </div>
             </div>
 
@@ -139,6 +87,7 @@
                     class="text-xl font-bold mb-4 text-gray-800 sticky top-0 bg-gray-200 p-2 text-center border-b border-gray-300">
                     Featured Products </h2>
                 <div class="space-y-4">
+                    {% for i in "1234"|make_list %}
                     <div class="bg-white rounded-lg p-2 hover:shadow-xl flex h-30">
                         <div class="w-1/3 mr-4 flex-shrink-0">
                             <img src="{% static 'image/oil painting1.jpg' %}"
@@ -152,122 +101,26 @@
                             </div>
                             <div class="flex justify-end">
                                 <a href="#"
-                                    class="inline-block bg-gray-500 text-white text-sm font-medium px-3 py-1 rounded-md hover:bg-zinc-700 transition duration-150">
+                                    class="inline-block bg-gray-500 text-white text-sm font-medium px-3 py-1 rounded-md hover:bg-zinc-700 ">
                                     View Details
                                 </a>
                             </div>
                         </div>
                     </div>
-                    <div class="bg-white rounded-lg p-2 hover:shadow-xl flex h-30">
-                        <div class="w-1/3 mr-4 flex-shrink-0">
-                            <img src="{% static 'image/oil painting1.jpg' %}"
-                                class="h-full w-full object-cover rounded-md">
-                        </div>
-                        <div class="w-2/3 flex flex-col justify-between">
-                            <div>
-                                <h3 class="font-bold text-base mb-1 truncate">Oil Painting Art</h3>
-                                <p class="text-gray-500 text-xs mb-2 line-clamp-2">Lorem Ipsum is simply dummy text of
-                                    the printing and typesetting industry.</p>
-                            </div>
-                            <div class="flex justify-end">
-                                <a href="#"
-                                    class="inline-block bg-gray-500 text-white text-sm font-medium px-3 py-1 rounded-md hover:bg-zinc-700 transition duration-150">
-                                    View Details
-                                </a>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="bg-white rounded-lg p-2 hover:shadow-xl flex h-30">
-                        <div class="w-1/3 mr-4 flex-shrink-0">
-                            <img src="{% static 'image/oil painting1.jpg' %}"
-                                class="h-full w-full object-cover rounded-md">
-                        </div>
-                        <div class="w-2/3 flex flex-col justify-between">
-                            <div>
-                                <h3 class="font-bold text-base mb-1 truncate">Oil Painting Art</h3>
-                                <p class="text-gray-500 text-xs mb-2 line-clamp-2">Lorem Ipsum is simply dummy text of
-                                    the printing and typesetting industry.</p>
-                            </div>
-                            <div class="flex justify-end">
-                                <a href="#"
-                                    class="inline-block bg-gray-500 text-white text-sm font-medium px-3 py-1 rounded-md hover:bg-zinc-700 transition duration-150">
-                                    View Details
-                                </a>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="bg-white rounded-lg p-2 hover:shadow-xl flex h-30">
-                        <div class="w-1/3 mr-4 flex-shrink-0">
-                            <img src="{% static 'image/oil painting1.jpg' %}"
-                                class="h-full w-full object-cover rounded-md">
-                        </div>
-                        <div class="w-2/3 flex flex-col justify-between">
-                            <div>
-                                <h3 class="font-bold text-base mb-1 truncate">Oil Painting Art</h3>
-                                <p class="text-gray-500 text-xs mb-2 line-clamp-2">Lorem Ipsum is simply dummy text of
-                                    the printing and typesetting industry.</p>
-                            </div>
-                            <div class="flex justify-end">
-                                <a href="#"
-                                    class="inline-block bg-gray-500 text-white text-sm font-medium px-3 py-1 rounded-md hover:bg-zinc-700 transition duration-150">
-                                    View Details
-                                </a>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="bg-white rounded-lg p-2 hover:shadow-xl flex h-30">
-                        <div class="w-1/3 mr-4 flex-shrink-0">
-                            <img src="{% static 'image/oil painting1.jpg' %}"
-                                class="h-full w-full object-cover rounded-md">
-                        </div>
-                        <div class="w-2/3 flex flex-col justify-between">
-                            <div>
-                                <h3 class="font-bold text-base mb-1 truncate">Oil Painting Art</h3>
-                                <p class="text-gray-500 text-xs mb-2 line-clamp-2">Lorem Ipsum is simply dummy text of
-                                    the printing and typesetting industry.</p>
-                            </div>
-                            <div class="flex justify-end">
-                                <a href="#"
-                                    class="inline-block bg-gray-500 text-white text-sm font-medium px-3 py-1 rounded-md hover:bg-zinc-700 transition duration-150">
-                                    View Details
-                                </a>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="bg-white rounded-lg p-2 hover:shadow-xl flex h-30">
-                        <div class="w-1/3 mr-4 flex-shrink-0">
-                            <img src="{% static 'image/oil painting1.jpg' %}"
-                                class="h-full w-full object-cover rounded-md">
-                        </div>
-                        <div class="w-2/3 flex flex-col justify-between">
-                            <div>
-                                <h3 class="font-bold text-base mb-1 truncate">Oil Painting Art</h3>
-                                <p class="text-gray-500 text-xs mb-2 line-clamp-2">Lorem Ipsum is simply dummy text of
-                                    the printing and typesetting industry.</p>
-                            </div>
-                            <div class="flex justify-end">
-                                <a href="#"
-                                    class="inline-block bg-gray-500 text-white text-sm font-medium px-3 py-1 rounded-md hover:bg-zinc-700 transition duration-150">
-                                    View Details
-                                </a>
-                            </div>
-                        </div>
-                    </div>
-                </div>
+                    {% endfor %}
+               </div>
             </div>
-
         </div>
     </section>
 
     <section class="p-2 sm:p-2 md:p-3 bg-white">
         <div class="flex flex-col md:flex-row gap-6">
-
             <div class="md:flex-grow md:w-3/4 bg-gray-200 shadow-lg rounded-lg p-2 sm:p-6 mb-2">
                 <div class="flex items-center justify-between mb-4">
                     <h2 class="text-2xl sm:text-3xl md:text-4xl font-bold text-gray-800">
                         Cloth
                     </h2>
-                    <a href="#"
+                    <a href="{% url 'website:all_product' %}"
                         class="inline-block py-2 px-4 text-base font-medium bg-white text-gray-600 border border-gray-100 rounded-lg hover:bg-gray-50">
                         view more
                     </a>
@@ -276,17 +129,9 @@
                 <div class="grid grid-cols-2 xs:grid-cols-2 md:grid-cols-2 lg:grid-cols-3 xl:grid-cols-4 gap-3 sm:gap-4 md:gap-6">
                     <div class="bg-white rounded-lg shadow-md hover:shadow-xl transition p-2 sm:p-2 flex flex-col">
                         <div class="w-full aspect-square mb-3 overflow-hidden rounded-lg">
-                            <div class="swiper w-full h-full">
-                                <div class="swiper-wrapper">
-                                    <div class="swiper-slide">
-                                        <img src="{% static 'image/oil painting1.jpg' %}" alt="Oil Painting"
+                            <div class=" w-full h-full">
+                                <img src="{% static 'image/oil painting1.jpg' %}" alt="Oil Painting"
                                             class="w-full h-full object-cover">
-                                    </div>
-                                    <div class="swiper-slide">
-                                        <img src="{% static 'image/Dhaka Nepali Cholo.jpg' %}" alt="Nepali Cholo"
-                                            class="w-full h-full object-cover">
-                                    </div>
-                                </div>
                                 <div class="swiper-button-next !text-white "></div>
                                 <div class="swiper-button-prev !text-white "></div>
                             </div>
@@ -303,47 +148,13 @@
                                 </div>
                             </div>
                         </div>
-                    </div>
-
-                    <div class="bg-white rounded-lg shadow-md hover:shadow-xl transition p-2 sm:p-2 flex flex-col">
-                        <div class="w-full aspect-square mb-3 overflow-hidden rounded-lg">
-                            <div class="swiper w-full h-full">
-                                <div class="swiper-wrapper">
-                                    <div class="swiper-slide">
-                                        <img src="{% static 'image/oil painting1.jpg' %}" alt="Oil Painting"
-                                            class="w-full h-full object-cover">
-                                    </div>
-                                    <div class="swiper-slide">
-                                        <img src="{% static 'image/Dhaka Nepali Cholo.jpg' %}" alt="Nepali Cholo"
-                                            class="w-full h-full object-cover">
-                                    </div>
-                                </div>
-                                <div class="swiper-button-next !text-white "></div>
-                                <div class="swiper-button-prev !text-white "></div>
-                            </div>
-                        </div>
-                        <div class="flex flex-col flex-grow">
-                            <div class="flex-1 min-w-0">
-                                <h3 class="text-sm sm:text-base font-semibold text-gray-900 truncate">Oil Painting</h3>
-                                <div class="flex justify-between items-center mt-auto">
-                                    <span class="text-xs sm:text-xm text-gray-500">Made in Nepal</span>
-                                    <a href="{% url 'website:product' %}"
-                                        class="text-sm font-bold bg-white text-gray-600 hover:text-gray-400">
-                                        View More
-                                    </a>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-
+                    </div>        
                 </div>
             </div>
             <div class="md:w-1/4 bg-gray-200 rounded-lg shadow-md px-4 overflow-y-auto h-[400px]">
                 <img src="{% static 'image/ad1.jpg' %}" class="h-full w-full object-cover rounded-md">
             </div>
-
         </div>
-
     </section>
 </div>
 
