--- a/templates/nav info/faq.html
+++ b/templates/nav info/faq.html
@@ -1,46 +1,34 @@
 {% extends 'base.html' %}
 {% load static %}
 
-{% block title %}policy - hello_bajar{% endblock %}
+{% block title %}policy{% endblock %}
 
 {% block content %}
 <div class="min-h-screen flex items-center justify-center px-4 py-10">
-    <div class="w-full max-w-3xl bg-white dark:bg-gray-900 rounded-lg shadow border border-gray-200 dark:border-gray-700">
+    <div class="w-full max-w-3xl bg-white dark:bg-gray-900 rounded-lg shadow ">
 
         
         <!-- Item 1 -->
-        <div class="border-b border-gray-200 dark:border-gray-700">
-            <button class="w-full flex justify-between items-center p-5 text-left font-semibold text-gray-800 dark:text-gray-200 accordion-btn">
+        <div>
+            <button class="w-full flex justify-between p-5 text-white font-semibold text-gray-800 text-gray-200 accordion-btn">
                 Question
-                <span class="transition-transform duration-300">&#9660;</span>
+                <span class="">&#9660;</span>
             </button>
-            <div class="max-h-0 overflow-hidden transition-all duration-300 accordion-content bg-gray-50 dark:bg-gray-800">
-                <p class="p-5 text-gray-700 dark:text-gray-300">Answer</p>
+            <div class="max-h-0 overflow-hidden accordion-content bg-gray-200">
+                <p class="p-5 text-gray-900">Answer</p>
             </div>
         </div>
 
         <!-- Item 2 -->
-        <div class="border-b border-gray-200 dark:border-gray-700">
-            <button class="w-full flex justify-between items-center p-5 text-left font-semibold text-gray-800 dark:text-gray-200 accordion-btn">
-                Question 2
-                <span class="transition-transform duration-300">&#9660;</span>
+         <div>
+            <button class="w-full flex justify-between p-5 text-white font-semibold text-gray-800 text-gray-200 accordion-btn">
+                Question
+                <span class="">&#9660;</span>
             </button>
-            <div class="max-h-0 overflow-hidden transition-all duration-300 accordion-content bg-gray-50 dark:bg-gray-800">
-                <p class="p-5">This is the answer to the second question.</p>
+            <div class="max-h-0 overflow-hidden accordion-content bg-gray-200">
+                <p class="p-5 text-gray-900">Answer</p>
             </div>
         </div>
-
-        <!-- Item 3 -->
-        <div class="border-gray-200 dark:border-gray-700">
-            <button class="w-full flex justify-between items-center p-5 text-left font-semibold text-gray-800 dark:text-gray-200 accordion-btn">
-                Question 3
-                <span class="transition-transform duration-300">&#9660;</span>
-            </button>
-            <div class="max-h-0 overflow-hidden transition-all duration-300 accordion-content bg-gray-50 dark:bg-gray-800">
-                <p class="p-5">This is the answer to the third question.</p>
-            </div>
-        </div>
-
     </div>
 </div>
 {% endblock %}
