--- a/templates/services.html
+++ b/templates/services.html
@@ -1,39 +1,28 @@
 {% extends 'base.html' %}
 {% load static %}
 
-{% block title %}Products - hello bajar{% endblock %}
+{% block title %}Services{% endblock %}
 
 {% block extra_css %}
 <style>
-.hero-banner {
-    background-image: url('/static/image/banner4.jpg');
-    background-size: cover;
-    background-position: center;
-    background-repeat: no-repeat;
-    min-height: 450px; 
-}
-
-/* Small Screens */
 @media (max-width: 1200px) {
     .hero-banner {
         min-height: 280px; 
     }
 }
 
-/* Very Small Mobile */
 @media (max-width: 360px) {
     .hero-banner {
         min-height: 180px;
     }
 }
-
 </style>
 {% endblock %}
 
 {% block content %}
 
 
-<section class="hero-banner relative flex items-end">
+<section class="hero-banner bg-[url('{% static 'image/banner4.jpg' %}')] bg-cover bg-center h-[200px] md:h-[400px] relative flex items-end">
 
     <div class="relative p-8 md:p-16 text-white max-w-7xl mx-auto w-full">
         <p class="text-sm font-semibold  uppercase mb-2 opacity-80 border-l-4 border-orange-500 pl-3">
@@ -45,7 +34,6 @@
     <div class="container mx-auto px-4">
         <div class="grid grid-cols-1 md:grid-cols-3 gap-15 mx-2 sm:mx-4 md:p-0 px-2">
 
-            <!-- Left Side -->
             <div class="md:col-span-1">
                 <p class="text-sm font-semibold tracking-widest text-red-500 mb-3">
                     OUR SERVICES
@@ -56,7 +44,6 @@
                 </h2>
             </div>
 
-            <!-- Right Side -->
             <div class="md:col-span-2 text-gray-600 leading-relaxed">
                 <p class="mb-4">
                     Lorem Ipsum is simply dummy text of the printing and typesetting
@@ -64,7 +51,6 @@
                     ever since the 1500s, when an unknown printer took a galley of type
                     and scrambled it to make a type specimen book.
                 </p>
-
                 <p>
                     It has survived not only five centuries, but also the leap into
                     electronic typesetting, remaining essentially unchanged.
@@ -80,7 +66,7 @@
     <div class="max-w-6xl mx-auto px-4 sm:px-6 lg:px-8 m-8">
         <div class="grid grid-cols-2 md:grid-cols-2 lg:grid-cols-4 gap-8 sm:gap-4 ">
 
-            <div class="">
+            <div class="flex flex-col items-center text-center">
                 <div class="mb-3 text-3xl text-gray-800">
                     <i class="bi bi-truck"></i>
                 </div>
